--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
+
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span></span>
+						<span class="titulopagina">AGRODRONEMACHINE</span>
+
+						<div >
+						<img class="logoagro" src="images/logoagrodrone.png" alt="" />
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -44,8 +47,8 @@
 						<!-- servicios -->
 							<article id="intro">
 								<h2 class="major">Servicios</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<h4>Realizamos aplicación de pesticidas, líquidos, fertilizantes y herbicidas en una amplia gama de cultivos.</h4>
+								<span class="image main"><img src="images/bannerwebagro2.gif" alt="" /></span>
+								<h4>Realizamos aplicación de pesticidas, líquidos, solidos, fertilizantes y herbicidas en una amplia gama de cultivos.</h4>
 								<li>Cultivos Tradicionales</li>
 								<li>Huertos Frutales</li>
 								<li>Cultivos Hortícolas</li>
@@ -56,45 +59,45 @@
 						<!-- beneficios -->
 							<article id="work">
 								<h2 class="major">Beneficios</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/bannerwebagro2.gif" alt="" /></span>
 								<ul>
-									<li>Gran velocidad de aplicación: Hasta 12 Ha/hora en promedio.</li>
-									<li>Boquillas ajustables a distintos tipos de aplicación.</li>
-									<li>Control automático, semi-automático y manual de la aplicación.</li>
-									<li>No contamina.</li>
-									<li>No existe riesgo de intoxicación del personal. Altura de fumigación ajustable sobre las plantaciones.</li>
-									<li>Capacidad de fumigar en zonas de difícil acceso, como laderas o cultivos de alta densidad donde solo es posible la aplicación manual.</li>
-									<li>Disminución del drift producido por el viento ajustando la altura de fumigación y potencia de las bombas.</li>
-									<li>Capacidad de aplicación nocturna mediante uso de GPS y Radar.</li>
-									<li>Operación inteligente mediante planes de vuelo automáticos.</li>
-									<li>Fumigación de Bajo Volumen (VLV) “Very Low Volume”</li>
-									<li>Cobertura mayor a 70 impactos x cm2, medido a tasa de 15L/Ha. Según FAO 1988 ideal para aplicación de herbicidas, fungicidas e insecticidas tanto sistémicos como de contacto.</span></li>
 									<li>Capacidad de fumigar grandes extensiones de terreno.</span></li>
 									<li>Ahorro del 90% de agua en la dilución de los químicos.</span></li>
 									<li>Ahorro de hasta un 30% de producto</span></li>
 									<li>Aplicación más uniforme gracias a aspersión de alta presión.</span></li>
 									<li>Mezclas de mayor concentración, lo que aumenta la eficiencia de la aplicación.</span></li>
 									<li>Menor riesgo de contaminación de aguas superficiales</li>
+									<li>Gran velocidad de aplicación: Hasta 12 Ha/hora en promedio.</li>
+									<li>Boquillas ajustables a distintos tipos de aplicación.</li>
+									<li>No contamina.</li>
+									<li>No existe riesgo de intoxicación del personal. Altura de fumigación ajustable sobre las plantaciones.</li>
+									<li>Capacidad de fumigar en zonas de difícil acceso, como laderas o cultivos de alta densidad donde solo es posible la aplicación manual.</li>
+									<li>Capacidad de aplicación nocturna mediante uso de GPS y Radar.</li>
+									
 								</ul>
 							</article>
 
 						<!-- galeria -->
 							<article id="about">
 								<h2 class="major">Galeria</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<div class="contenedorvideos">
+									<iframe width="400" height="225" src="https://www.youtube.com/embed/-cqlbxY-Ldc?controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
+									<iframe width="400" height="225" src="https://www.youtube.com/embed/-cqlbxY-Ldc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
+									<iframe width="400" height="225" src="https://www.youtube.com/embed/-cqlbxY-Ldc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+								</div>
 							</article>
 
 						<!-- Contacto -->
 							<article id="contact">
 								<h2 class="major">Contacto</h2>
 								<ul>
-									<h3><a href="#" class="icon brands fa-instagram"><span>	Instagram</span></a></h3>
-									<h3><a href="#" class="icon brands fa-whatsapp"><span>	Whatsapp</span></a></h3>
-									<h3><a href="#" class="fa fa-envelope-o"><span>	Correo</span></a></h3>
+									<h3><a href="https://www.instagram.com/agrodronemachine"><span>	@agrodronemachine</span></a></h3>
+									<h3><a href="https://wa.me/56928105958"><span>+56928105958<span></a></h3>
+									<h3><a href="mailto:agrodronemachine@gmail.com"><span>agrodronemachine@gmail.com</span></a></h3>
 
 								</ul>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/bannerwebagro2.gif" alt="" /></span>
 							</article>
 
 					</div>
