--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Servicios</a></li>
-								<li><a href="#work">Beneficios</a></li>
-								<li><a href="#about">Galeria</a></li>
-								<li><a href="#contact">Contacto</a></li>
+								<li><a href="#Servicios">Servicios</a></li>
+								<li><a href="#Beneficios">Beneficios</a></li>
+								<li><a href="#Galeria">Galeria</a></li>
+								<li><a href="#Contacto">Contacto</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -45,7 +45,7 @@
 					<div id="main">
 
 						<!-- servicios -->
-							<article id="intro">
+							<article id="Servicios">
 								<h2 class="major">Servicios</h2>
 								<span class="image main"><img src="images/bannerwebagro2.gif" alt="" /></span>
 								<h4>Realizamos aplicación de pesticidas, líquidos, solidos, fertilizantes y herbicidas en una amplia gama de cultivos.</h4>
@@ -57,7 +57,7 @@
 														</article>
 
 						<!-- beneficios -->
-							<article id="work">
+							<article id="Beneficios">
 								<h2 class="major">Beneficios</h2>
 								<span class="image main"><img src="images/bannerwebagro2.gif" alt="" /></span>
 								<ul>
@@ -78,7 +78,7 @@
 							</article>
 
 						<!-- galeria -->
-							<article id="about">
+							<article id="Galeria">
 								<h2 class="major">Galeria</h2>
 								<div class="contenedorvideos">
 									<iframe width="300" height="200" src="https://www.youtube.com/embed/-cqlbxY-Ldc?controls=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -87,7 +87,7 @@
 							</article>
 
 						<!-- Contacto -->
-							<article id="contact">
+							<article id="Contacto">
 								<h2 class="major">Contacto</h2>
 								<ul>
 									
