--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
 							<article id="Servicios">
 								<h2 class="major">Servicios</h2>
 								<span class="image main"><img src="images/bannerwebagro2.gif" alt="" /></span>
-								<h4>Realizamos aplicación de pesticidas, líquidos, solidos, fertilizantes y herbicidas en una amplia gama de cultivos.</h4>
-								<li>Cultivos Tradicionales</li>
-								<li>Huertos Frutales</li>
-								<li>Cultivos Hortícolas</li>
-								<li>Cultivos Vitivinícolas</li>
-								<li>Plantaciones Forestales</li>
+								<h4 class="contacto">Ofrecemos aplicación profesional de pesticidas, fertilizantes, herbicidas y productos sólidos para una gran variedad de cultivos.</h4>
+								<li>Cultivos Tradicionales.</li>
+								<li>Huertos Frutales.</li>
+								<li>Cultivos Hortícolas.</li>
+								<li>Cultivos Vitivinícolas.</li>
+								<li>Plantaciones Forestales.</li>
+								<li>Constamos con todas las normas para aplicacion de pesticidas.</li>
+
 														</article>
 
 						<!-- beneficios -->
@@ -66,13 +68,13 @@
 									<li>Capacidad de fumigar grandes extensiones de terreno.</span></li>
 									<li>Ahorro del 90% de agua en la dilución de los químicos.</span></li>
 									<li>Ahorro de hasta un 30% de producto</span></li>
-									<li>Aplicación más uniforme gracias a aspersión de alta presión.</span></li>
+									<li>Aplicación más uniforme gracias a aspersión de alta precisión .</span></li>
 									<li>Mezclas de mayor concentración, lo que aumenta la eficiencia de la aplicación.</span></li>
 									<li>Menor riesgo de contaminación de aguas superficiales</li>
-									<li>Gran velocidad de aplicación: Hasta 12 Ha/hora en promedio.</li>
+									<li>Gran velocidad de aplicación: Hasta 10 Ha/hora en promedio.</li>
 									<li>Boquillas ajustables a distintos tipos de aplicación.</li>
 									<li>No contamina.</li>
-									<li>No existe riesgo de intoxicación del personal. Altura de fumigación ajustable sobre las plantaciones.</li>
+									<li>Altura de fumigación ajustable sobre las plantaciones.</li>
 									<li>Capacidad de fumigar en zonas de difícil acceso, como laderas o cultivos de alta densidad donde solo es posible la aplicación manual.</li>
 									<li>Capacidad de aplicación nocturna mediante uso de GPS y Radar.</li>
 									
